force-app/main/default/objects/Trigger_Configuration__mdt/Trigger_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>https://www.linkedin.com/pulse/custom-metadata-type-switches-bypassing-record-trigger-stuart-werner/</description>
    <label>Trigger Configuration</label>
    <pluralLabel>Trigger Configurations</pluralLabel>
</CustomObject>