force-app/main/default/objects/Trigger_Configuration__mdt/fields/Bypass_User__c.field-meta.xml
<CustomField>
    <fullName>Bypass_User__c</fullName>
    <description>Contains the username of the running user that can potentially bypass the execution of the trigger.</description>
    <label>Bypass User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>