force-app/main/default/objects/Trigger_Configuration__mdt/fields/Is_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Trigger_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switch to toggle the trigger (or flow) on and off.</description>
    <label>Is Trigger Enabled?</label>
    <type>Checkbox</type>
</CustomField>