force-app/main/default/objects/Trigger_Configuration__mdt/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <label>Trigger Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>